<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background1"
        android:scaleType="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="348dp"
        android:layout_height="508dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@color/Bordo_button"
        app:columnCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.623"
        app:rowCount="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:text="@string/vivaista"
            android:textAllCaps="true"
            android:background="@color/Vivaista"
            android:textAlignment="center"
            android:textColor="@color/Grid_text"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingTop="30dp"
            app:layout_column="0"
            app:layout_row="0" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatura_gradi"
            android:layout_marginTop="30dp"
            android:layout_marginStart="200dp"
            app:layout_column="0"
            app:layout_row="1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/umidit"
            android:layout_marginTop="90dp"
            android:layout_marginStart="30dp"
            app:layout_column="0"
            app:layout_row="1" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="200dp"
            app:layout_column="0"
            app:layout_row="1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luci_serra"
            android:layout_marginTop="150dp"
            android:layout_marginStart="30dp"
            app:layout_column="0"
            app:layout_row="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            android:layout_marginTop="150dp"
            android:layout_marginStart="200dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annaffiatoi"
            android:layout_marginTop="210dp"
            android:layout_marginStart="30dp"
            app:layout_column="0"
            app:layout_row="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            android:layout_marginTop="210dp"
            android:layout_marginStart="200dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portelloni"
            android:layout_marginTop="270dp"
            android:layout_marginStart="30dp"
            app:layout_column="0"
            app:layout_row="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch"
            android:layout_marginTop="270dp"
            android:layout_marginStart="200dp"
            app:layout_column="0"
            app:layout_row="1" />



    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>