<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:adjustViewBounds="true"
        android:background="@drawable/terra"
        android:contentDescription="@string/background"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="348dp"
        android:layout_height="508dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@color/Bordo_button"
        app:columnCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.71000004"
        app:rowCount="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:background="@color/Agricoltore"
            android:drawableStart="@drawable/agricoltore"
            android:paddingVertical="30dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:text="@string/agricoltore"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/Grid_text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/temperatura_esterna"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="30dp"
            android:id="@+id/temperatura"
            app:layout_column="0"
            app:layout_row="1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:text="@string/umidit"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/livelloUmidita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="68dp"
            android:text="livello"
            app:layout_column="0"
            app:layout_row="1" />


        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="60dp"
            android:paddingVertical="35dp"
            app:layout_column="0"
            app:layout_row="1"
            android:id="@+id/umiditaProgressBar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            android:text="@string/irrigatori"
            app:layout_column="0"
            app:layout_row="1" />

        <Switch
            android:id="@+id/switchIrrigatori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="150dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="210dp"
            android:text="@string/aspiratori"
            app:layout_column="0"
            app:layout_row="1" />

        <Switch
            android:id="@+id/switchAspiratori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="210dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="270dp"
            android:text="@string/qualit_biologica"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textBiologica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="248dp"
            android:text="livello"
            app:layout_column="0"
            app:layout_row="1" />


        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/biologicaProgressBar"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="240dp"
            android:paddingVertical="35dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="330dp"
            android:text="@string/microinquinanti"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textInquinanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="303dp"
            app:layout_column="0"
            app:layout_row="1" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/inquinantiProgressBar"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="295dp"
            android:paddingVertical="35dp"
            app:layout_column="0"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>